[project]
name = "yes-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "psycopg>=3.2.6",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "ruff>=0.11.5",
    "sqlmodel>=0.0.24",
]
